--- a/SalesWebMvc/Views/Sellers/Edit.cshtml
+++ b/SalesWebMvc/Views/Sellers/Edit.cshtml
@@ -16,18 +16,24 @@
             <div class="form-group">
                 <label asp-for="Seller.Name" class="control-label"></label>
                 <input asp-for="Seller.Name" class="form-control" />
+                <span asp-validation-for="Seller.Name" class="text-danger"></span>  <!--tag de validação que aplicara na view as anotations de validação do controler, apresentando perto do campo-->
             </div>
             <div class="form-group">
                 <label asp-for="Seller.Email" class="control-label"></label>
                 <input asp-for="Seller.Email" class="form-control" />
+                <span asp-validation-for="Seller.Email" class="text-danger"></span>  <!--tag de validação que aplicara na view as anotations de validação do controler, apresentando perto do campo-->
+
             </div>
             <div class="form-group">
                 <label asp-for="Seller.BirthDate" class="control-label"></label>
                 <input asp-for="Seller.BirthDate" class="form-control" />
+                <span asp-validation-for="Seller.BirthDate" class="text-danger"></span>  <!--tag de validação que aplicara na view as anotations de validação do controler, apresentando perto do campo-->
             </div>
             <div class="form-group">
                 <label asp-for="Seller.BaseSalary" class="control-label"></label>
                 <input asp-for="Seller.BaseSalary" class="form-control" />
+                <span asp-validation-for="Seller.BaseSalary" class="text-danger"></span>  <!--tag de validação que aplicara na view as anotations de validação do controler, apresentando perto do campo-->
+
             </div>
             <div class="form-group">
                 <label asp-for="Seller.DepartmentId" class="control-label"></label>
@@ -40,3 +46,9 @@
         </form>
     </div>
 </div>
+
+<!--Macete para garantir que as validações de anotations no controler rodem no JavaScript do cliente-->
+@section Scripts {
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
+
